# dtom

./: .gitignore  README.md  main.py  pyproject.toml
dtom-lens/: USER_MANUAL.md  app.py  dtom_analysis.py  dtom_classifier.py  dtom_llm_classifier_v2.py  pyproject.toml  requirements.txt
dtom-lens/.streamlit/: config.toml
dtom-lens/data/precomputed/: llm_agreement.json  llm_convergence.json  talkmoves_results.json  transcript_l3_analysis.csv
ncte_output/: ncte_replication_results.json
output/: additional_option1_confusion.json  additional_option2_coding.json  additional_option2_lifts.csv  additional_option2_reasons.json  additional_option3_within_category.json  additional_option4_grade_level.json  llm_agreement_results.json  llm_coding_results.json  llm_coding_results_claude.json  llm_coding_results_run2.json  llm_comparison.csv  llm_consensus.csv  llm_consensus_analysis.json  llm_followup_analysis.json  llm_samples.json  llm_threeway_analysis.json
reports/: additional_experiments_report.md  study3_llm_convergence_report.md
src/dtom/: __init__.py  additional_experiments.py  analysis_pipeline.py  llm_classifier.py  llm_consensus.py  llm_followup.py  llm_payload.py  llm_validation.py  ncte_replication.py
